--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,17 @@
     <groupId>XBN</groupId>
     <artifactId>XBN</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <profiles>
+        <profile>
+            <id>test</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <browerType>firefox</browerType>
+            </properties>
+        </profile>
+    </profiles>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <checkstyle.config.location>config/maven_checks.xml</checkstyle.config.location>
@@ -76,22 +87,24 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
+                    <systemProperties>
+                        <ErrorImgFilePath>error_img</ErrorImgFilePath>
+                        <LogFilePath>logs</LogFilePath>
+                        <ConfigFilePath>conf</ConfigFilePath>
+                        <TestDataFilePath>testdata</TestDataFilePath>
+                    </systemProperties>
                     <suiteXmlFiles>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                    <properties>
+                        <property>
+                            <name>testnames</name>
+                            <value>home</value>
+                        </property>
+                    </properties>
+                    <!--<groups>bbb</groups>-->
                 </configuration>
             </plugin>
-
-            <!--<plugin>-->
-                <!--<groupId>org.codehaus.mojo</groupId>-->
-                <!--<artifactId>findbugs-maven-plugin</artifactId>-->
-                <!--<version>2.5.2</version>-->
-                <!--<configuration>-->
-                    <!--<findbugsXmlOutput>true</findbugsXmlOutput>-->
-                    <!--<xmlOutput>true</xmlOutput>-->
-                    <!--<findbugsXmlOutputDirectory>target/site</findbugsXmlOutputDirectory>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
 
         </plugins>
     </build>
