--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -13,7 +13,7 @@ log4j.appender.all_info.Encoding=UTF-8
 log4j.appender.all_info.Threshold=INFO
 log4j.appender.all_info.ImmediateFlush=true
 log4j.appender.all_info.Append=true
-log4j.appender.all_info.File=./logs/all_info.log
+log4j.appender.all_info.File=./target/logs/all_info.log
 log4j.appender.all_info.DatePattern='.'yyyy-MM-dd
 log4j.appender.all_info.layout=org.apache.log4j.PatternLayout
 log4j.appender.all_info.layout.ConversionPattern=[%p][%F][%-d{yyyy-MM-dd HH:mm:ss}]%m%n
@@ -24,7 +24,7 @@ log4j.appender.error.Encoding=UTF-8
 log4j.appender.error.Threshold=ERROR
 log4j.appender.error.ImmediateFlush=true
 log4j.appender.error.Append=true
-log4j.appender.error.File =./logs/error.log
+log4j.appender.error.File =./target/logs/error.log
 log4j.appender.error.DatePattern='.'yyyy-MM-dd
 log4j.appender.error.layout = org.apache.log4j.PatternLayout
 log4j.appender.error.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
