--- a/pom.xml
+++ b/pom.xml
@@ -89,8 +89,8 @@
                 <version>2.4</version>
                 <configuration>
                     <systemProperties>
-                        <ErrorImgFilePath>error_img</ErrorImgFilePath>
-                        <LogFilePath>logs</LogFilePath>
+                        <ErrorImgFilePath>.\target\error_img</ErrorImgFilePath>
+                        <LogFilePath>.\target\logs</LogFilePath>
                         <ConfigFilePath>conf</ConfigFilePath>
                         <TestDataFilePath>testdata</TestDataFilePath>
                         <Browser>${browerType}</Browser>
