--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -13,10 +13,11 @@ log4j.appender.all_info.Encoding=UTF-8
 log4j.appender.all_info.Threshold=INFO
 log4j.appender.all_info.ImmediateFlush=true
 log4j.appender.all_info.Append=true
-log4j.appender.all_info.File=./target/logs/all_info.log
+log4j.appender.all_info.File=${LogFilePath}/all_info.log
 log4j.appender.all_info.DatePattern='.'yyyy-MM-dd
 log4j.appender.all_info.layout=org.apache.log4j.PatternLayout
-log4j.appender.all_info.layout.ConversionPattern=[%p][%F][%-d{yyyy-MM-dd HH:mm:ss}]%m%n
+#log4j.appender.all_info.layout.ConversionPattern=[%p][%F][%-d{yyyy-MM-dd HH:mm:ss}]%m%n
+log4j.appender.all_info.layout.ConversionPattern=[%p] [%F] %d{yyyy-MM-dd HH:mm:ss} %m%n
 
 ###保存异常信息到独立文件###
 log4j.appender.error = org.apache.log4j.DailyRollingFileAppender
@@ -24,7 +25,7 @@ log4j.appender.error.Encoding=UTF-8
 log4j.appender.error.Threshold=ERROR
 log4j.appender.error.ImmediateFlush=true
 log4j.appender.error.Append=true
-log4j.appender.error.File =./target/logs/error.log
+log4j.appender.error.File =${LogFilePath}/error.log
 log4j.appender.error.DatePattern='.'yyyy-MM-dd
 log4j.appender.error.layout = org.apache.log4j.PatternLayout
-log4j.appender.error.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
+log4j.appender.error.layout.ConversionPattern = [%p] %-d{yyyy-MM-dd HH:mm:ss} %l [%t:%r] %m%n
