修改测试框架结构： 1.使用LoadableComponent 2.修改startDriver的启动方式 3.修改LogWriter的参数读取方式 4.使用reportng

--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -1,31 +1,31 @@
 ###[%p][%-d{yyyy-MM-dd HH:mm:ss}]%m%n
 log4j.rootLogger=INFO , stdout , all_info , error
 
-###è¾“å‡ºåˆ°æ§åˆ¶å¡”###
+###Êä³öµ½¿ØÖÆËş###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c :  %m%n
 
-###è¾“å‡ºåˆ°å…¨æ—¥å¿—æ–‡ä»¶###
+###Êä³öµ½È«ÈÕÖ¾ÎÄ¼ş###
 log4j.appender.all_info=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.all_info.Encoding=UTF-8
 log4j.appender.all_info.Threshold=INFO
 log4j.appender.all_info.ImmediateFlush=true
 log4j.appender.all_info.Append=true
-log4j.appender.all_info.File=${LogFilePath}/all_info.log
+log4j.appender.all_info.File=target/logs/all_info.log
 log4j.appender.all_info.DatePattern='.'yyyy-MM-dd
 log4j.appender.all_info.layout=org.apache.log4j.PatternLayout
 #log4j.appender.all_info.layout.ConversionPattern=[%p][%F][%-d{yyyy-MM-dd HH:mm:ss}]%m%n
 log4j.appender.all_info.layout.ConversionPattern=[%p] [%F] %d{yyyy-MM-dd HH:mm:ss} %m%n
 
-###ä¿å­˜å¼‚å¸¸ä¿¡æ¯åˆ°ç‹¬ç«‹æ–‡ä»¶###
+###±£´æÒì³£ĞÅÏ¢µ½¶ÀÁ¢ÎÄ¼ş###
 log4j.appender.error = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.error.Encoding=UTF-8
 log4j.appender.error.Threshold=ERROR
 log4j.appender.error.ImmediateFlush=true
 log4j.appender.error.Append=true
-log4j.appender.error.File =${LogFilePath}/error.log
+log4j.appender.error.File =target/logs/error.log
 log4j.appender.error.DatePattern='.'yyyy-MM-dd
 log4j.appender.error.layout = org.apache.log4j.PatternLayout
 log4j.appender.error.layout.ConversionPattern = [%p] %-d{yyyy-MM-dd HH:mm:ss} %l [%t:%r] %m%n
