--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>XBN</groupId>
     <artifactId>XBN</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <checkstyle.config.location>config/maven_checks.xml</checkstyle.config.location>
+    </properties>
+
     <profiles>
         <profile>
             <id>test</id>
@@ -14,27 +19,16 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <browerType>firefox</browerType>
+                <browerType>chrome</browerType>
             </properties>
         </profile>
     </profiles>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <checkstyle.config.location>config/maven_checks.xml</checkstyle.config.location>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>3.10-FINAL</version>
-        </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>5.0.2</version>
-            <scope>test</scope>
-            <classifier>jdk15</classifier>
         </dependency>
 
         <!-- http://mvnrepository.com/artifact/log4j/log4j -->
@@ -50,19 +44,36 @@
             <artifactId>selenium-java</artifactId>
             <version>2.53.0</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>6.9.10</version>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/checkstyle/checkstyle -->
         <dependency>
             <groupId>checkstyle</groupId>
             <artifactId>checkstyle</artifactId>
             <version>5.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.10</version>
+            <!--<scope>test</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.uncommons</groupId>
+            <artifactId>reportng</artifactId>
+            <version>1.1.4</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.testng</groupId>
+                    <artifactId>testng</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>3.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -88,23 +99,31 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
+                    <!--<debugForkedProcess>true</debugForkedProcess>-->
                     <systemProperties>
                         <ErrorImgFilePath>.\target\error_img</ErrorImgFilePath>
                         <LogFilePath>.\target\logs</LogFilePath>
-                        <ConfigFilePath>conf</ConfigFilePath>
+                        <ConfigFilePath>config</ConfigFilePath>
                         <TestDataFilePath>testdata</TestDataFilePath>
-                        <Browser>${browerType}</Browser>
                     </systemProperties>
                     <suiteXmlFiles>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
                     <properties>
                         <property>
                             <name>testnames</name>
-                            <value>home</value>
+                            <value>login</value>
+                        </property>
+                        <property>
+                            <name>usedefaultlisteners</name>
+                            <value>false</value>
+                        </property>
+                        <property>
+                            <name>listener</name>
+                            <value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
                         </property>
                     </properties>
-                    <!--<groups>bbb</groups>-->
                 </configuration>
             </plugin>
 
